@@ -4,6 +4,7 @@ class Snippet < ActiveRecord::Base
   include Participable
   include Referable
   include Sortable
+  include Awardable
 
   default_value_for :visibility_level, Snippet::PRIVATE
 
