@@ -101,6 +101,7 @@ Rails.application.routes.draw do
   resources :snippets do
     member do
       get 'raw'
+      post :toggle_award_emoji
     end
   end
 
@@ -110,7 +111,6 @@ Rails.application.routes.draw do
   #
   # Invites
   #
-
   resources :invites, only: [:show], constraints: { id: /[A-Za-z0-9_-]+/ } do
     member do
       post :accept
@@ -665,6 +665,7 @@ Rails.application.routes.draw do
         resources :snippets, constraints: { id: /\d+/ } do
           member do
             get 'raw'
+            post :toggle_award_emoji
           end
         end
 
