@@ -539,6 +539,7 @@ v 8.10.0
   - Updated project header design
   - Issuable collapsed assignee tooltip is now the users name
   - Fix compare view not changing code view rendering style
+  - Emoji can be awarded on Snippets !4456
   - Exclude email check from the standard health check
   - Updated layout for Projects, Groups, Users on Admin area. !4424
   - Fix changing issue state columns in milestone view
